Closed
Bug 1656980
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::net::CookiePersistentStorage::EnsureReadComplete]
Categories
(Core :: Networking: Cookies, defect)
Tracking
()
RESOLVED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | fixed |
| firefox81 | --- | fixed |
People
(Reporter: philipp, Assigned: baku)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
+++ This bug was initially created as a clone of Bug #1650211 +++
the crash signature from bug 1650211 (which received a fix in 79) seems to be reappearing now at the start of the 80.0b cycle, so i'm filing this as a cloned bug.
sample crash report: bp-611134bf-6bfc-43b3-ab94-4514d0200731.
Top 8 frames of crashing thread:
0 xul.dll mozilla::net::CookiePersistentStorage::EnsureReadComplete netwerk/cookie/CookiePersistentStorage.cpp:1687
1 xul.dll mozilla::net::CookieService::GetCookiesSince netwerk/cookie/CookieService.cpp:2240
2 xul.dll XPTC__InvokebyIndex
3 @0x5ab8f0f2b8e38
4 xul.dll nsXPTType::IsDependent const xpcom/reflect/xptinfo/xptinfo.h:263
5 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1140
6 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:946
7 @0x88bd793ed9
Flags: needinfo?(amarchesini)
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/09921685a632
CookieService::GetCookiesSince needs to check the CookieService initialization state, r=mayhemer
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
| Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 9167819 [details]
Bug 1656980 - CookieService::GetCookiesSince needs to check the CookieService initialization state, r?mayhemer
Beta/Release Uplift Approval Request
- User impact if declined: A crash can occur in CookieService
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): GetCookiesSince() is the only getter method in CookieService without initialization check. The fix is low risk.
- String changes made/needed: none
Flags: needinfo?(amarchesini)
Attachment #9167819 -
Flags: approval-mozilla-beta?
Comment 6•5 years ago
|
||
Comment on attachment 9167819 [details]
Bug 1656980 - CookieService::GetCookiesSince needs to check the CookieService initialization state, r?mayhemer
crash fix, approved for 80.0b5
Attachment #9167819 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
status-firefox-esr68:
--- → unaffected
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•