Bug 1656980 - CookieService::GetCookiesSince needs to check the CookieService initialization state, r=mayhemer, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D85824